results/SVCOMP/4-shot/log-ExSymExe11-2024_03_18_17_27_23.txt
class Main {
  static int field;

  //@ requires arg < 0 || arg >= 0;
  //@ ensures \result == (arg < 0 || (arg % 100 == field && test(3, field)));
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = 3;
    Main inst = new Main();
    field = arg % 100;
    return inst.test(x, field);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result == (z <= 0 || (y > 0 && \result));
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe11");
    int y = 3;
    z = -x;
    x = z * x;
    if (z <= 0) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (y <= 0) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == (arg < 0 || (arg % 100 == field && test(3, field)));
                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == (arg < 0 || (arg % 100 == field && test(3, field)));
                                                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:5: error: non-static method test(int,int) cannot be referenced from a static context
  //@ ensures \result == (arg < 0 || (arg % 100 == field && test(3, field)));
                                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExe11.java:16: error: cannot find symbol
  //@ ensures \result == (z <= 0 || (y > 0 && \result));
                                     ^
  symbol:   variable y
  location: class Main
4 errors

